check done insertVA
